--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "framer-motion": "^4.1.17",
     "luxon": "^1.27.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
